# HealthManager

./: pyproject.toml
HealthManager/core/scraper/: osakadou.py
notebooks/: tests.ipynb
